// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SourceModule.resolve > should not resolve built-in modules 1`] = `undefined`;

exports[`SourceModule.resolve > should resolve external modules 1`] = `
{
  "allowImportingTsExtensions": undefined,
  "dirPath": "/home/michael/Development/barrels/node_modules/tsconfck/src",
  "extName": "js",
  "fileName": "tsconfck",
  "filePath": "/home/michael/Development/barrels/node_modules/tsconfck/src/index.js",
  "isExternal": true,
  "moduleResolution": "bundler",
  "tsconfigPath": "/home/michael/Development/barrels/tsconfig.json",
}
`;

exports[`SourceModule.resolve > should resolve local modules 1`] = `
{
  "allowImportingTsExtensions": undefined,
  "dirPath": "/home/michael/Development/barrels/packages/barrels/tests/__fixtures__",
  "extName": "ts",
  "fileName": "exports",
  "filePath": "/home/michael/Development/barrels/packages/barrels/tests/__fixtures__/exports.ts",
  "isExternal": false,
  "moduleResolution": "bundler",
  "tsconfigPath": "/home/michael/Development/barrels/packages/barrels/tests/__fixtures__/tsconfig.json",
}
`;

exports[`SourceModule.resolve > should resolve relative external modules 1`] = `
{
  "allowImportingTsExtensions": undefined,
  "dirPath": "/home/michael/Development/barrels/node_modules/tsconfck/src",
  "extName": "js",
  "fileName": "./find.js",
  "filePath": "/home/michael/Development/barrels/node_modules/tsconfck/src/find.js",
  "isExternal": true,
  "moduleResolution": undefined,
  "tsconfigPath": "",
}
`;

exports[`SourceModule.resolve > should resolve relative local modules 1`] = `
{
  "allowImportingTsExtensions": undefined,
  "dirPath": "/home/michael/Development/barrels/packages/barrels/tests/__fixtures__",
  "extName": "ts",
  "fileName": "exports",
  "filePath": "/home/michael/Development/barrels/packages/barrels/tests/__fixtures__/exports.ts",
  "isExternal": false,
  "moduleResolution": "bundler",
  "tsconfigPath": "/home/michael/Development/barrels/packages/barrels/tests/__fixtures__/tsconfig.json",
}
`;

exports[`SourceModule.resolve > should resolve tsconfig aliases 1`] = `
{
  "allowImportingTsExtensions": undefined,
  "dirPath": "/home/michael/Development/barrels/packages/barrels/tests/__fixtures__",
  "extName": "ts",
  "fileName": "exports",
  "filePath": "/home/michael/Development/barrels/packages/barrels/tests/__fixtures__/exports.ts",
  "isExternal": false,
  "moduleResolution": "bundler",
  "tsconfigPath": "/home/michael/Development/barrels/packages/barrels/tests/__fixtures__/tsconfig.json",
}
`;
